feat: call api from back to display all users in the admin UI page
